Fix viewport and modal z-index

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -107,6 +107,7 @@ tr.clickable {
     display: none;
 }
 
+.modal { z-index: 1041;}
 #flashMessage {
     position: fixed;
     top: 0;
